adjust spacing issues around inset items after merge

--- a/themes/news-proto/less/_story-responsive.less
+++ b/themes/news-proto/less/_story-responsive.less
@@ -7,12 +7,7 @@
         text-align:center;
       }
     }
-    .align-right, 
-    .align-left{
-      float:none;
-      margin:0 0 2em 0;
-      width:100%;
-    }
+    
     .align-center{
       &.inset-width{
         width:100%;
