--- a/themes/news-proto/less/base.less
+++ b/themes/news-proto/less/base.less
@@ -583,6 +583,17 @@ aside {
     padding: 1.2em;
     width: inherit;
     clear: both;
+    p{
+      .font-size-em(14px);
+      font-weight: 400;
+      font-family: @font-family-sans-serif;
+      //padding-left: 1.2em;
+      //padding-right: 1.2em;
+      padding: 0;
+      margin: 0;
+      //padding-bottom: 1.2em;
+      line-height: 1.3em;     
+    }
   }
 
   .category {
@@ -615,18 +626,6 @@ aside {
       color: @su-red;
       text-decoration: underline;
     }
-  }
-
-  .teaser {
-    .font-size-em(14px);
-    font-weight: 400;
-    font-family: @font-family-sans-serif;
-    //padding-left: 1.2em;
-    //padding-right: 1.2em;
-    padding: 0;
-    margin: 0;
-    //padding-bottom: 1.2em;
-    line-height: 1.3em;
   }
 
   time {
@@ -745,17 +744,6 @@ aside {
       }
     }
   }
-}
-
-
-// This modifies the humanities Sidebar Infobox
-
-.humanities {
-  background-image: url('../images/humanities-infobox-back.png');
-  background-color: white;
-  background-position: right bottom;
-  background-repeat: no-repeat;
-  //border: 1px solid red;
 }
 
 
