--- a/themes/news-proto/less/story.less
+++ b/themes/news-proto/less/story.less
@@ -2,13 +2,11 @@
 
 article {
   margin-top: 1em;
-
   /* fonts */
   h1, h2, h3, h4, h5, h6,
   p {
     font-family: @font-family-serif;
   }
-
   a{
     color:@su-red-text;
   }
@@ -19,7 +17,6 @@ article {
     margin-bottom: .5em;
     font-family: @font-family-sans-serif;
   }
-
   time,
   .byline,
   .media-attrib,
@@ -27,13 +24,11 @@ article {
   {
     font-family: @font-family-sans-serif;
   }
-
   time,
   p {
     font-size: 1.2em;
     line-height: 1.7em;
   }
-
   time {
     display: block;
     color: @su-red-text;
@@ -41,15 +36,12 @@ article {
     margin-top: 2em;
 
   }
-
   .excerpt {
     font-size: 1.3em;
     font-style: italic;
     font-family: @font-family-serif;
     line-height: 1.5em;
   }
-
-
   .story-margin-top{
     margin-top:1.8em;
   }
@@ -77,7 +69,6 @@ article {
     line-height: 1.3em;
     font-size:1em;
   }
-
   .align-center,
   .pull-right,
   .pull-left {
@@ -107,7 +98,6 @@ article {
   .pull-right-narrow{
     margin:0 -10% 0 2em;    
   }
-
   blockquote{
     border-left: none;
     color: @su-red-text;
@@ -129,14 +119,12 @@ article {
       line-height: .05;      
     }
   }
-
   .quote-attrib{
     text-transform: uppercase;
     font-weight: 600;
     font-family: @font-family-sans-serif;
     font-size: 1em;  
   }
-
   .share{//call-to-action share for social media and blockquotes
          margin-bottom:2em;
          clear:both;
@@ -144,16 +132,17 @@ article {
            width:inherit;
          }
   }
-
   .story-social{
     &.card{
       background: none;
       box-shadow: none;
-      margin: 0;
       .card-content {
         width: 80%;
         margin-left: 10%;
         margin-right: 10%;
+        p{
+          line-height: 1.6;
+        }
         img{//twitter
           width:100% !important;
         }
@@ -170,20 +159,10 @@ article {
       }
       }
     }
-
   }
-  .card-content p, .sidebar-story p {
-    font-size: 14px;
-    line-height: 1.6;
-    font-family: @font-family-sans-serif;
-  }
-
-
-
   #article-content {
     margin-top: 1.8em;
   }
-
   .social-share{
     a {
       display: block;
@@ -195,13 +174,11 @@ article {
       }
     }
   }
-
   .byline {
     color: @su-red-text;
     text-transform: uppercase;
     margin-bottom:0;
   }
-
   .byline-link {
     color: @su-black;
     font-style: italic;
@@ -214,7 +191,6 @@ article {
       }
     }
   }
-
   #media-contact{
     margin-top:4em;      
     p{
@@ -226,7 +202,6 @@ article {
       font-family: @font-family-sans-serif;
       font-weight:500;
     }
-
   }
 }
 
@@ -245,6 +220,9 @@ article {
       color: black;
     }
   }
+  .btn-category{
+    background-color:#c0c0c0;
+  }  
 }
 
 #bottom{
@@ -256,8 +234,15 @@ article {
   }
 }
 
-.btn-category{
-  background-color:#c0c0c0;
+
+
+/*** Sidebar infobox styles ***/
+.humanities {
+  background-image: url('../images/humanities-infobox-back.png');
+  background-color: white;
+  background-position: right bottom;
+  background-repeat: no-repeat;
+  //border: 1px solid red;
 }
 
 
